# devimon

./: .gitignore  Cargo.toml  DINO_PLAN.md  LEADERBOARD_PLAN.md  PLAN.md  README.md  devimon.md  install.ps1  install.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
cloudflare/: README.md
cloudflare/site/: app.js  components.js  i18n.js  index.html  splash.js  styles.css
cloudflare/worker/: package-lock.json  package.json  schema.sql  wrangler.toml
cloudflare/worker/src/: index.js  index.test.js
docs/audit/: 01-server-authoritative-leaderboard.md  02-sync-identity-and-monster-ownership.md  03-xp-progression-integrity.md  04-evolution-needs-and-time-model.md  05-dino-monster-unlock-rules.md  06-testing-and-observability.md  07-verified-unverified-leaderboard.md  README.md
docs/ops/: ADMIN_DEBUG.md
docs/progress/: AUDIT_COMPLETE_CHECKLIST.md  MILESTONES.md
src/: actions.rs  cloud.rs  display.rs  main.rs  monster.rs  save.rs  ui.rs  watcher.rs  xp.rs
src/dino/: collision.rs  domain.rs  input.rs  integration.rs  mod.rs  render.rs  update.rs
